--- a/apps/central/static/central/styles/central.css
+++ b/apps/central/static/central/styles/central.css
@@ -10,11 +10,10 @@
 }
 
 .central-options {
-  height: 90%;
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 70%;
+  width: 85%;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
   overflow: hidden;
   transition: 1s;
   z-index: 0;
@@ -22,8 +21,6 @@
 
 .option-card {
   position: relative;
-  height: 600px;
-  width: 400px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
   cursor: pointer;
   transition: box-shadow 0.25s;
@@ -34,12 +31,6 @@
   width: 100%;
   height: 100%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.5);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .option-text {
@@ -52,12 +43,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
-.option-title p {
-  font-size: 22px;
-  font-weight: 600;
-  font-family: 'Bebas Neue', Sans-Serif;
+.option-title {
+  font-size: calc(1rem + 0.75vw);
+}
+
+.option-title, .option-description p {
+  margin: 1rem 0;
 }
 
 .option-description {
@@ -65,23 +59,18 @@
   overflow: hidden;
   transition: 0.5s;
   padding: 0px 25px;
+  margin: 0;
 }
 
 .option-description p {
-  font-family: 'Lato', Sans-Serif;
-  margin-bottom: 25px;
+  margin-top: 0;
+  opacity: 0.7;
 }
 
-.central-options #toxicity .option-image{
-  background-image: url("../../../../static/images/toxic-current-yemoja.jpg");
-}
-
-.central-options #esports .option-image {
-  background-image: url("../../../../static/images/smite-esports.jpg");
-}
-
-.central-options #builder .option-image{
-  background-image: url("../../../../static/images/chef-vulcan-vulcan.jpg");
+.option-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #left-nav, #right-nav {
@@ -91,7 +80,6 @@
   z-index: 2;
   opacity: 0;
   transition: 1s;
-  font-size: 24px;
 }
 
 /* ! Footer Element */
@@ -108,111 +96,25 @@
 
 .swipe-footer {
   margin-bottom: 20px;
-  font-size: 20px;
 }
 
 .swipe-contents {
   background-color: #444;
   width: 100%;
-  text-align: center;
   overflow: hidden;
   transition: 1s;
-}
-
-.footer-section {
-  width: 100%;
-  padding: 50px 0;
-  background-color: #444;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .footer-contents {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding: 40px 0;
 }
 
-.footer-main {
-  width: 100%;
+.footer-info {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-top: 25px;
-}
-
-.footer-info, .footer-links {
-  width: 50%;
-  text-align: center;
-}
-
-.footer-links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.footer-links h3 {
-  font-size: 25px;
-  margin: 5px 0;
-}
-
-.footer-links a {
-  font-size: 20px;
-  margin: 2.5px;
-}
-
-.social-links {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.social-links a {
-  font-size: 30px;
-  margin: 10px;
-}
-
-.central-tag {
-  font-family: "Bebas Neue", cursive;
-  font-size: 30px;
-  margin: 0 10px;
-  font-weight: bold;
-}
-
-.copyright-tag {
-  width: 100%;
-  text-align: center;
-  margin-top: 20px;
-  font-size: 20px;
-  margin-bottom: 25px;
-}
-
-.copyright-tag p {
-  font-family: "Bebas Neue", cursive;
-}
-
-/* ! Loader Element */
-
-.option-loader {
-  border: 15px solid rgba(0,0,0, 0.5);
-  border-top: 15px solid rgba(255, 255, 255, 70%);
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  animation: spin 2s linear infinite;
-  opacity: 0;
-  animation-play-state: paused;
-  transition: 1s;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
 
 @media (hover: hover) {
@@ -235,8 +137,7 @@
   }
 
   .option-card {
-    width: 70vw;
-    height: 85%;
+    width: 75vw;
   }
 
   .swipe-footer {
@@ -268,18 +169,14 @@
   .footer-info, .footer-links {
     width: 100%;
   }
-
-  .mdi.mdi-flip-v {
-    color: black;
-  }
 }
 
 @media (orientation: landscape) and (max-width: 1024px) {
-  .option-card {
-    height: 75%;
-  }
-
   .swipe-footer {
     margin-bottom: 10px;
+  }
+
+  .footer-contents {
+    padding: 10px 0;
   }
 }
