--- a/apps/esports/templates/esports/components/navbar-esports.html
+++ b/apps/esports/templates/esports/components/navbar-esports.html
@@ -3,4 +3,5 @@
 {% block navbarLogo %}SMITE Esports{% endblock %}
 {% block navbarLinks %}
     <span class="mdi mdi-magnify" id="esports-search"></span>
+    <a class="mdi mdi-home" id="home-button" href="{% url 'central' %}"></a>
 {% endblock %}
