--- a/apps/esports/templates/esports/league.html
+++ b/apps/esports/templates/esports/league.html
@@ -1,6 +1,8 @@
 {% extends 'esports/layouts/gallery.html' %}
 {% load static %}
 
+{% block title %}SMITE Esports - {{ league }} Season {{ season }}{% endblock %}
+
 {% block topbar-content %}
     {{ league }} {{ season }}
 {% endblock %}
