--- a/smitecentral/templates/construction.html
+++ b/smitecentral/templates/construction.html
@@ -9,13 +9,15 @@
     <div class="construction">
         <div class="construction-container">
             <div class="construction-message">
-                <h1>Under Construction</h1>
+                <h2>Under Construction</h2>
                 <p>This Area Of Central Will Be With You Shortly, Follow Our Socials To See When They Are Released:</p>
             </div>
             <div class="construction-links">
-                <span class="mdi mdi-facebook"></span>
-                <span class="mdi mdi-twitter"></span>
-                <span class="mdi mdi-linkedin"></span>
+                <a href="https://www.facebook.com/" class="mdi mdi-facebook"></a>
+                <a href="https://www.twitter.com/" class="mdi mdi-twitter"></a>
+                <a href="https://www.linkedin.com/" class="mdi mdi-linkedin"></a>
+                <a href="https://www.github.com/fidelElie/" class="mdi mdi-github"></a>
+                <a href="mailto:fidel.elie@australa.co" class="mdi mdi-email"></a>
             </div>
             <div class="construction-navigation">
                 <button id="back-button">Back To Central</button>
