--- a/apps/esports/templates/esports/components/video-player.html
+++ b/apps/esports/templates/esports/components/video-player.html
@@ -6,60 +6,51 @@
         <div class="progress-bar"></div>
     </div>
     <div class="player-controls">
+        <div class="player-tooltips">
+            <span class=tooltip id="play-pause">Play</span>
+            <span class="tooltip" id="mute">Mute</span>
+            <span class="tooltip" id="volume-input"></span>
+            <span class="tooltip" id="back">Step Backward</span>
+            <span class="tooltip" id="forward">Step Forward</span>
+            <span class="tooltip" id="to-start">Back To Start</span>
+            <span class="tooltip" id="match-nav">Show Match Navigation</span>
+            <span class="tooltip" id="progress-show">Show Video Progress (SPOILER)</span>
+            <span class="tooltip" id="skip">Skip Amount</span>
+            <span class="tooltip" id="skip-amount"></span>
+            <span class="tooltip" id="step">Step Amount</span>
+            <span class="tooltip" id="speed">Playback Speed</span>
+            <span class="tooltip" id="speed-input"></span>
+            <span class="tooltip" id="fullscreen">Fullscreen</span>
+        </div>
         <div class="left-aligned-controls">
             <div class="control-group">
-                <span class="mdi mdi-play" id="player-play-pause">
-                    <span class="tooltip">Play</span>
-                </span>
-                <span class="mdi mdi-volume-high" id="player-mute">
-                    <span class="tooltip">Mute</span>
-                </span>
+                <span class="mdi mdi-play collapsed" id="player-play-pause"></span>
+                <span class="mdi mdi-volume-high" id="player-mute"></span>
                 <div class="control-range">
                     <input type="range" min="0" max="100" value="100" class="sliders" id="player-volume-input" name="volume">
-                    <output for="volume" class="value-indicator"></output>
                 </div>
             </div>
             <div class="control-group">
-                <span class="mdi mdi-step-backward" id="player-back">
-                    <span class="tooltip">Step Backward</span>
-                </span>
-                <span class="mdi mdi-step-forward" id="player-forward">
-                    <span class="tooltip">Step Forward</span>
-                </span>
-                <span class="mdi mdi-step-backward-2" id="player-to-start">
-                    <span class="tooltip">Back To Start</span>
-                </span>
+                <span class="mdi mdi-step-backward" id="player-back"></span>
+                <span class="mdi mdi-step-forward" id="player-forward"></span>
+                <span class="mdi mdi-step-backward-2" id="player-to-start"></span>
             </div>
         </div>
         <div class="right-aligned-controls">
             <div class="control-group">
                 {% if start != None %}
-                    <span class="mdi mdi-swap-horizontal" id="player-display-match-nav">
-                        <span class="tooltip">Show Round Navigation</span>
-                    </span>
+                    <span class="mdi mdi-swap-horizontal" id="player-match-nav"></span>
                 {% endif %}
-                <span class="mdi mdi-progress-clock" id="player-progress-show">
-                    <span class="tooltip">Show Video Progress (SPOILER)</span>
-                </span>
+                <span class="mdi mdi-progress-clock" id="player-progress-show"></span>
                 <div class="control-range">
                     <input type="range" min="0" max="4" value="2" class="sliders hidden" id="player-skip-amount" name="skip">
-                    <output for="skip" class="value-indicator"></output>
                 </div>
-                <span class="mdi mdi-timer-sand" id="player-skip">
-                    <span class="tooltip">Step Amount</span>
-                    <span class="prompt-tooltip" id="player-skip-amount-prompt"></span>
-                </span>
+                <span class="mdi mdi-timer-sand" id="player-skip"></span>
                 <div class="control-range">
                     <input type="range" min="0" max="4" value="2" class="sliders hidden" id="player-speed-input" name="speed">
-                    <output for="speed" class="value-indicator"></output>
                 </div>
-                <span class="mdi mdi-speedometer-medium" id="player-speed">
-                    <span class="tooltip">Playback Speed</span>
-                    <span class="prompt-tooltip" id="player-speed-input-prompt"></span>
-                </span>
-                <span class="mdi mdi-fullscreen" id="player-fullscreen">
-                    <span class="tooltip">Fullscreen</span>
-                <span>
+                <span class="mdi mdi-speedometer-medium" id="player-speed"></span>
+                <span class="mdi mdi-fullscreen" id="player-fullscreen"><span>
             </div>
         </div>
     </div>
