--- a/apps/esports/templates/esports/match.html
+++ b/apps/esports/templates/esports/match.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'esports/styles/match.css' %}">
 {% endblock %}
 
-{% block title %}SMITE Video{% endblock %}
+{% block title %}SMITE Esports - {{ title }}{% endblock %}
 
 {% block content %}
     <div class="video-player">
