--- a/smitecentral/static/styles/base.css
+++ b/smitecentral/static/styles/base.css
@@ -3,24 +3,41 @@ body, html {
   width: 100%;
   height: 100%;
   color: white;
+  font-size: 100%;
 }
 
 body {
   background-color: #071425;
 }
 
+html {
+  font-size: calc(1rem + 0.5vw);
+}
+
 * {
-  font-family: "Lato", sans-serif;
+  font-family: "Bebas Neue", sans-serif;
 }
 
 h1, h2, h3 {
   font-family: "Bebas Neue", cursive;
 }
 
+h1 {
+  font-size: calc(1.25rem + 1vw);
+}
+
+h2 {
+  font-size: calc(1.15rem + 1vw);
+}
+
 a {
   text-decoration: none;
   color: white;
   font-family: 'Bebas Neue', cursive;
+}
+
+select, button, span {
+  font-size: calc(0.75rem + 0.5vw);
 }
 
 .mdi {
