--- a/smitecentral/static/styles/components/navbar.css
+++ b/smitecentral/static/styles/components/navbar.css
@@ -7,7 +7,7 @@
 .navbar {
   position: absolute;
   width: 100%;
-  height: 60px;
+  height: 8vh;
   top: 0;
 }
 
@@ -30,14 +30,12 @@
 
 .navbar-links span{
   margin: 0 20px;
-  font-size: 20px;
 }
 
 .navbar-links a {
   margin: 0 20px;
   font-family: "Bebas Neue", cursive;
 }
-
 
 @media only screen and (max-width: 600px) {
   .navbar-links a {
